// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writingMode renders 0 1`] = `
Array [
  .c0 {
  writing-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`writingMode renders function 1`] = `
Array [
  .c0 {
  writing-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`writingMode renders invalid theme path 1`] = `
Array [
  .c0 {
  writing-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`writingMode renders negative number 1`] = `
Array [
  .c0 {
  writing-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`writingMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    writing-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    writing-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    writing-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    writing-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    writing-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    writing-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    writing-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    writing-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    writing-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    writing-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    writing-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    writing-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    writing-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    writing-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    writing-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    writing-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`writingMode renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    writing-mode: July;
  }
}

@media April {
  .c0 {
    writing-mode: August;
  }
}

@media January {
  .c0 {
    writing-mode: September;
  }
}

@media April {
  .c0 {
    writing-mode: November;
  }
}

@media June {
  .c0 {
    writing-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    writing-mode: July;
  }
}

@media April {
  .c0 {
    writing-mode: August;
  }
}

@media January {
  .c0 {
    writing-mode: September;
  }
}

@media April {
  .c0 {
    writing-mode: November;
  }
}

@media June {
  .c0 {
    writing-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    writing-mode: January;
  }
}

@media April {
  .c0 {
    writing-mode: December;
  }
}

@media January {
  .c0 {
    writing-mode: April;
  }
}

@media April {
  .c0 {
    writing-mode: May;
  }
}

@media June {
  .c0 {
    writing-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    writing-mode: January;
  }
}

@media April {
  .c0 {
    writing-mode: December;
  }
}

@media January {
  .c0 {
    writing-mode: April;
  }
}

@media April {
  .c0 {
    writing-mode: May;
  }
}

@media June {
  .c0 {
    writing-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`writingMode renders postitive number 1`] = `
Array [
  .c0 {
  writing-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`writingMode renders string 1`] = `
Array [
  .c0 {
  writing-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`writingMode renders valid theme path 1`] = `
Array [
  .c0 {
  writing-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  writing-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
